style.css
/* ... */
.unlock:hover {
    background-color: rgba(50, 50, 50, 0.4);
}

.tex {
    position: absolute;
    bottom: 50px;
    font-weight: bold;
    font-size: 21px;
    color: white;
    text-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
    scale: 1;
    transition: transform 0.4s ease-in-out, scale 0.4s ease-in-out;
}

.monitor-container {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 400px;
    background-color: black;
    background-size: cover;
}

#loading_screen {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    transition: opacity 1.5s ease;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: white;
    font-size: 20px;
}

@font-face {
    font-family: 'SegoeBootSpinner';
    src: url('https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Fonts/segoe_slboot.ttf') format('truetype');
}

.spinner {
    font-family: 'SegoeBootSpinner';
    font-size: 2rem;
    user-select: none;
    display: block;
    position: relative;
    margin-top: 200px;
}

.load-status-text {
    position: absolute;
    top: 350px;
    color: white;
    justify-content: center;
}

.screen {
    position: absolute;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #000000;
    opacity: 0;
    transition: opacity 1s ease-in-out;
    pointer-events: none;
}

.screen.hid {
    opacity: 0;
    transition: opacity 0.5s ease-in-out;
    pointer-events: none;
}

.removeDOM {
    display: none;
}

.screen.visible {
    opacity: 1;
    transition: opacity 1s ease-in-out;
    pointer-events: auto;
    display: flex;
}

#booting-up_screen {
    color: #fff;
    text-align: center;
}

#booting-up_screen h1 {
    font-size: 2rem;
    animation: glowing 2s infinite;
}

@keyframes glowing {
    0% {
        text-shadow: 0 0 20px #ff00ff, 0 0 30px #ff00ff, 0 0 40px #ff00ff, 0 0 50px #ff00ff;
    }

    100% {
        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff00ff, 0 0 40px #ff00ff;
    }
}

#footer-text {
    position: absolute;
    bottom: 4px;
    right: 10px;
    font-size: 0.05rem;
    color: #fff;
}

#lock_screen h1 {
    font-size: 1.5rem;
    margin-bottom: 10px;
}

#BG {
    position: absolute;
    width: 100vw;
    height: 100vh;
    background-image: url('https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Backgrounds/Wallpaper.jpg?raw=true');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    filter: blur(0px);
    transform: scale(1.02);
    transition: filter 0.6s ease-in-out, transform 0.65s ease-in-out, scale 0.6s ease-in-out;
}

#lock_screen select {
    padding: 8px;
    margin-top: 10px;
    font-size: 1rem;
    border-radius: 5px;
}

#Desktop {
    background-image: url('https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Backgrounds/Wallpaper.jpg?raw=true');
    background-size: cover;
    background-repeat: no-repeat;
    text-align: center;
    background-position: center;
}

#Desktop h1 {
    font-size: 2rem;
    color: #fff;
}

#controls button {
    font-size: 1rem;
    padding: 10px 20px;
    margin-top: 20px;
    border-radius: 5px;
}

.taskbar {
    position: absolute;
    bottom: 11px;
    width: calc(100% - 20px);
    height: 40px;
    background-color: rgba(50, 50, 50, 0.4);
    backdrop-filter: blur(9px) contrast(1.2);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 10px;
    box-sizing: border-box;
    border-top: 1px solid #444;
    border-radius: 8px;
    overflow: hidden;
    z-index: 2550;
    opacity: 0;
    transform: translateY(1025px) scaleX(0.4);
    transition: opacity 1s ease, transform 0.35s ease;
}

.taskbar.show {
    opacity: 1;
    transform: translateY(0px) scaleX(1);
}

#taskbar-hover {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 2px;
    background: transparent;
    z-index: 9999;
}

.taskbar::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(50, 50, 50, 0);
    filter: blur(18px);
    z-index: -1;
}

.taskbar-flex {
    position: relative;
    top: auto;
    left: 35px;
    justify-content: flex-start;
    display: inline-flex;
    gap: 7px;
    padding-top: 10px;
    padding-bottom: 10px;
    width: calc(100% - 160px);
    bottom: auto;
    right: auto;
    height: 100%;
    align-items: center;
    transition: transform 0.3s, opacity 0.3s, margin 0.3s ease-in-out;
}

.tile {
    width: 35px;
    height: 35px;
    background-color: rgba(255, 255, 255, 0);
    border-radius: 7px;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: transform 0.3s ease, opacity 0.2s, margin 0.3s ease-in-out, width 0.3s ease, background-color 0.3s ease, border-top 0.2s ease;
    position: relative;
    border-top: 0px solid rgba(0, 0, 0, 0);
}

.tile img {
    width: 75%;
    height: 75%;
    transition: transform 0.3s ease, opacity 0.2s, margin 0.3s ease-in-out, width 0.3s ease, background-color 0.3s ease, border-top 0.2s ease;
}

.tile:hover {
    background: rgba(150, 150, 150, 0.17);
}

.hidden {
    width: 0px;
    transform: scaleY(0);
    opacity: 0;
    pointer-events: none;
    transition: transform 0.3s ease, opacity 0.2s, margin 0.3s ease-in-out, width 0.3s ease, background-color 0.3s ease, border-top 0.2s ease;
}

.tile.hide {
    position: absolute;
    transition: transform 0.3s ease, opacity 0.2s, margin 0.3s ease-in-out, width 0.3s ease, background-color 0.3s ease, border-top 0.2s ease;
}
/* ... */

